nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: web-app
  name: nginx-svc
  labels:
    run: nginx-svc
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    k8s-app: web-app-nginx
